hphp/test/zend/good/Zend/tests/bug24773.php.expectf

Fatal error: Operator not supported for strings in %s/bug24773.php on line 3
